--- a/conf/conf.json.example
+++ b/conf/conf.json.example
@@ -1,4 +1,6 @@
 {
+  "FITBIT_CLIENT_ID": "DUMMY_VALUE", 
+  "FITBIT_CLIENT_SECRET": "DUMMY_VALUE", 
   "GOOGLE_API_CLIENT_AUTH_FILEPATH": "DUMMY_VALUE", 
   "GOOGLE_API_CLIENT_ID": "DUMMY_VALUE", 
   "GOOGLE_API_CLIENT_SECRET": "DUMMY_VALUE", 
