Pulling it all together and adding plots

--- a/conf/conf.json.example
+++ b/conf/conf.json.example
@@ -1,6 +1,8 @@
 {
+  "FITBIT_ACCESS_TOKEN": "DUMMY_VALUE", 
   "FITBIT_CLIENT_ID": "DUMMY_VALUE", 
   "FITBIT_CLIENT_SECRET": "DUMMY_VALUE", 
+  "FITBIT_REFRESH_TOKEN": "DUMMY_VALUE", 
   "GOOGLE_API_CLIENT_AUTH_FILEPATH": "DUMMY_VALUE", 
   "GOOGLE_API_CLIENT_ID": "DUMMY_VALUE", 
   "GOOGLE_API_CLIENT_SECRET": "DUMMY_VALUE", 
