--- a/conf/conf.json.example
+++ b/conf/conf.json.example
@@ -6,5 +6,6 @@
   "GOOGLE_API_CLIENT_AUTH_FILEPATH": "DUMMY_VALUE", 
   "GOOGLE_API_CLIENT_ID": "DUMMY_VALUE", 
   "GOOGLE_API_CLIENT_SECRET": "DUMMY_VALUE", 
-  "GOOGLE_API_CLIENT_SECRET_FILEPATH": "DUMMY_VALUE"
+  "GOOGLE_API_CLIENT_SECRET_FILEPATH": "DUMMY_VALUE", 
+  "RESCUETIME_API_KEY": "DUMMY_VALUE"
 }
