Add plaid support

--- a/conf/conf.json.example
+++ b/conf/conf.json.example
@@ -7,5 +7,8 @@
   "GOOGLE_API_CLIENT_ID": "DUMMY_VALUE", 
   "GOOGLE_API_CLIENT_SECRET": "DUMMY_VALUE", 
   "GOOGLE_API_CLIENT_SECRET_FILEPATH": "DUMMY_VALUE", 
+  "PLAID_CLIENT_ID": "DUMMY_VALUE", 
+  "PLAID_PUBLIC_KEY": "DUMMY_VALUE", 
+  "PLAID_SECRET_KEY": "DUMMY_VALUE", 
   "RESCUETIME_API_KEY": "DUMMY_VALUE"
 }
