--- a/.gitignore
+++ b/.gitignore
@@ -1,101 +1,42 @@
-# Outputs
-plots
+# Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
 
-# Sensitive files
-*conf.json
+# dependencies
+node_modules/
 
-# IDE
-.idea
-
-# Other
-.DS_Store
-
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
-
-# C extensions
-*.so
-
-# Distribution / packaging
-.Python
-env/
-build/
-develop-eggs/
+# Expo
+.expo/
 dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-*.egg-info/
-.installed.cfg
-*.egg
+web-build/
+expo-env.d.ts
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
+# Native
+.kotlin/
+*.orig.*
+*.jks
+*.p8
+*.p12
+*.key
+*.mobileprovision
 
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
+# Metro
+.metro-health-check*
 
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*,cover
-.hypothesis/
+# debug
+npm-debug.*
+yarn-debug.*
+yarn-error.*
 
-# Translations
-*.mo
-*.pot
+# macOS
+.DS_Store
+*.pem
 
-# Django stuff:
-*.log
-local_settings.py
-
-# Flask stuff:
-instance/
-.webassets-cache
-
-# Scrapy stuff:
-.scrapy
-
-# Sphinx documentation
-docs/_build/
-
-# PyBuilder
-target/
-
-# IPython Notebook
-.ipynb_checkpoints
-
-# pyenv
-.python-version
-
-# celery beat schedule file
-celerybeat-schedule
-
-# dotenv
+# local env files
+.env*.local
 .env
 
-# virtualenv
-venv/
-ENV/
+# typescript
+*.tsbuildinfo
 
-# Spyder project settings
-.spyderproject
-
-# Rope project settings
-.ropeproject
+# generated native folders
+/ios
+/android
