--- a/app.json
+++ b/app.json
@@ -14,7 +14,7 @@
     },
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.danielsuo.lifedb"
+      "bundleIdentifier": "ai.lifedb"
     },
     "android": {
       "adaptiveIcon": {
