--- a/package.json
+++ b/package.json
@@ -17,13 +17,17 @@
     "@react-navigation/native-stack": "^7.10.0",
     "diff": "^8.0.3",
     "expo": "~54.0.31",
+    "expo-crypto": "^15.0.8",
     "expo-file-system": "^19.0.21",
     "expo-status-bar": "~3.0.9",
+    "isomorphic-webcrypto": "^2.3.8",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-markdown-display": "^7.0.2",
     "react-native-safe-area-context": "^5.6.2",
-    "react-native-screens": "~4.16.0"
+    "react-native-screens": "~4.16.0",
+    "y-protocols": "^1.0.7",
+    "yjs": "^13.6.29"
   },
   "devDependencies": {
     "@types/diff": "^7.0.2",
