--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
     "@google/generative-ai": "^0.24.1",
+    "@octokit/rest": "^22.0.1",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/native": "^7.1.28",
     "@react-navigation/native-stack": "^7.10.0",
     "diff": "^8.0.3",
     "expo": "~54.0.31",
+    "expo-auth-session": "^7.0.10",
     "expo-crypto": "^15.0.8",
     "expo-file-system": "^19.0.21",
+    "expo-secure-store": "^15.0.8",
     "expo-status-bar": "~3.0.9",
+    "expo-web-browser": "^15.0.10",
     "isomorphic-webcrypto": "^2.3.8",
     "react": "19.1.0",
     "react-native": "0.81.5",
