--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "diff": "^8.0.3",
     "expo": "~54.0.31",
     "expo-auth-session": "^7.0.10",
+    "expo-constants": "^18.0.13",
     "expo-crypto": "^15.0.8",
     "expo-file-system": "^19.0.21",
     "expo-secure-store": "^15.0.8",
@@ -36,6 +37,7 @@
   "devDependencies": {
     "@types/diff": "^7.0.2",
     "@types/react": "~19.1.0",
+    "dotenv": "^17.2.3",
     "typescript": "~5.9.2"
   },
   "private": true
