feat: move About to info icon modal, add auto-backup on save, add scheme for OAuth

--- a/app.json
+++ b/app.json
@@ -2,6 +2,7 @@
   "expo": {
     "name": "lifedb",
     "slug": "lifedb",
+    "scheme": "lifedb",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
