--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "typecheck": "tsc --noEmit"
   },
@@ -21,10 +21,12 @@
     "expo-auth-session": "^7.0.10",
     "expo-constants": "^18.0.13",
     "expo-crypto": "^15.0.8",
+    "expo-dev-client": "~6.0.20",
     "expo-file-system": "^19.0.21",
     "expo-secure-store": "^15.0.8",
     "expo-status-bar": "~3.0.9",
     "expo-web-browser": "^15.0.10",
+    "isomorphic-git": "^1.36.1",
     "isomorphic-webcrypto": "^2.3.8",
     "react": "19.1.0",
     "react-native": "0.81.5",
