--- a/package.json
+++ b/package.json
@@ -26,15 +26,12 @@
     "expo-secure-store": "^15.0.8",
     "expo-status-bar": "~3.0.9",
     "expo-web-browser": "^15.0.10",
-    "isomorphic-git": "^1.36.1",
-    "isomorphic-webcrypto": "^2.3.8",
+    "lifedb-git": "file:./modules/lifedb-git",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-markdown-display": "^7.0.2",
     "react-native-safe-area-context": "^5.6.2",
-    "react-native-screens": "~4.16.0",
-    "y-protocols": "^1.0.7",
-    "yjs": "^13.6.29"
+    "react-native-screens": "~4.16.0"
   },
   "devDependencies": {
     "@types/diff": "^7.0.2",
