--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-crypto": "^15.0.8",
     "expo-dev-client": "~6.0.20",
     "expo-file-system": "^19.0.21",
+    "expo-font": "~14.0.10",
     "expo-secure-store": "^15.0.8",
     "expo-status-bar": "~3.0.9",
     "expo-web-browser": "^15.0.10",
